--- a/.github/workflows/build-debian-multiarch.yml
+++ b/.github/workflows/build-debian-multiarch.yml
@@ -85,7 +85,7 @@ jobs:
         run: |
           export PIP_CONFIG_FILE=buildconfig/pip_config.ini
           echo "\nBuilding pygame wheel\n"
-          python3 -m pip install Cython==3.0.0
+          python3 -m pip install "Cython==3.0,<3.1"
           python3 setup.py docs
           pip3 wheel . --wheel-dir /artifacts -vvv
           echo "\nInstalling wheel\n"
